# abh_gui_v3

./: .gitignore  .~lock.Addominali.csv#  .~lock.lista_esercizi.csv#  .~lock.workout1_facile_1.csv#  Addominali.csv  AllenamentoPersonalizzato.qml  BarraVolume.qml  Barra_superiore.qml  Barra_superiore_NoImag.qml  BottoniSwipe.qml  BottoniSwipe2.qml  BottoniUpDown.qml  Braccia.csv  CMakeLists.txt  CMakeLists.txt.user.22  CMakeLists.txt.user.4.10-pre1  CSlider.qml  ChiamataSistema.cpp  ChiamataSistema.h  CircularIndicator.qml  CircularSlider.qml  CircularTimer.qml  DefinizioneUtente1.qml  DefinizioneUtente2.qml  DescrizioneEsercizi.cpp  DescrizioneEsercizi.h  FrecceSotto.qml  FrecceSxDx.qml  FrecciaButton.qml  FreccieSotto.qml  Gambe.csv  IconaAudio.qml  IconaBottone.qml  IconaCerchio.qml  IconaCerchioVuoto.qml  IconaDescrizioneEsercizi.qml  IconaEsercizi.qml  IconaImmagine.qml  IconaInformazioni.qml  IconaLingua.qml  (+202 more)
coordinator/: Colorer.py  abh_constants.py  aws.py  coordinator.py  fake.py  fake_coordinator.py  fake_evaluator.py  fake_gui.py  launcher.py  launcher_v3.py  led_control.py  motor_configuration.yaml  motor_control.py  python_binary_udp_helper.py  python_udp_helper.py  read_credential.py  sender.py  test.py  udp_video_receiver.py  wifi_list.py
template/: .xsessionrc  ABH_NUOVA.desktop  ACTIVEWORKOUT_template.csv  SESSION_template.csv  WORKOUT_TEMPLATE.csv  default.csv  device_names.csv  ruota_mouse.sh  script_update.sh  start_abh.bash  start_abh.bash.desktop  stat_template.csv  user_config.csv  utenti.csv
vosk/: frasi.csv  microphone.py
